@@ -38,6 +38,7 @@ import password.pwm.config.profile.Profile;
 import password.pwm.config.profile.ProfileDefinition;
 import password.pwm.config.profile.PwmPasswordPolicy;
 import password.pwm.config.profile.SetupOtpProfile;
+import password.pwm.config.profile.SetupResponsesProfile;
 import password.pwm.config.profile.UpdateProfileProfile;
 import password.pwm.config.stored.StoredConfiguration;
 import password.pwm.config.stored.StoredConfigurationUtil;
@@ -47,12 +48,12 @@ import password.pwm.config.value.data.FormConfiguration;
 import password.pwm.config.value.data.NamedSecretData;
 import password.pwm.config.value.data.RemoteWebServiceConfiguration;
 import password.pwm.config.value.data.UserPermission;
+import password.pwm.error.PwmInternalException;
 import password.pwm.error.PwmUnrecoverableException;
 import password.pwm.i18n.PwmLocaleBundle;
 import password.pwm.util.PasswordData;
 import password.pwm.util.java.CollectionUtil;
 import password.pwm.util.java.JavaHelper;
-import password.pwm.util.java.LazySupplier;
 import password.pwm.util.logging.PwmLogger;
 import password.pwm.util.secure.PwmHashAlgorithm;
 import password.pwm.util.secure.PwmSecurityKey;
@@ -68,7 +69,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Supplier;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
@@ -82,11 +83,11 @@ public class DomainConfig implements SettingReader
     private final AppConfig appConfig;
     private final DomainID domainID;
 
-    private final ConfigurationSuppliers configurationSuppliers = new ConfigurationSuppliers();
-
     private final Map<String, PwmPasswordPolicy> cachedPasswordPolicy;
     private final Map<String, Map<Locale, ChallengeProfile>> cachedChallengeProfiles;
+    private final Map<String, LdapProfile> ldapProfiles;
     private final StoredSettingReader settingReader;
+    private final PwmSecurityKey domainSecurityKey;
 
     public DomainConfig( final AppConfig appConfig, final DomainID domainID )
     {
@@ -95,24 +96,27 @@ public class DomainConfig implements SettingReader
         this.domainID = Objects.requireNonNull( domainID );
         this.settingReader = new StoredSettingReader( storedConfiguration, null, domainID );
 
-        this.cachedPasswordPolicy = Map.copyOf( getPasswordProfileIDs().stream()
+        this.cachedPasswordPolicy = Collections.unmodifiableMap( getPasswordProfileIDs().stream()
                 .map( profile -> PwmPasswordPolicy.createPwmPasswordPolicy( this, profile ) )
                 .collect( Collectors.toMap(
                         PwmPasswordPolicy::getIdentifier,
-                        pwmPasswordPolicy -> pwmPasswordPolicy
+                        Function.identity()
                 ) ) );
 
-        this.cachedChallengeProfiles = Map.copyOf( getChallengeProfileIDs().stream()
+        this.cachedChallengeProfiles = Collections.unmodifiableMap( getChallengeProfileIDs().stream()
                 .collect( Collectors.toMap(
-                        profileId -> profileId,
-                        profileId -> Map.copyOf( appConfig.getKnownLocales().stream()
+                        Function.identity(),
+                        profileId -> Collections.unmodifiableMap( appConfig.getKnownLocales().stream()
                                 .collect( Collectors.toMap(
-                                        locale -> locale,
+                                        Function.identity(),
                                         locale -> ChallengeProfile.readChallengeProfileFromConfig( domainID, profileId, locale, storedConfiguration )
                                 ) ) )
                 ) ) );
+
+        this.ldapProfiles = makeLdapProfileMap( this );
+        this.domainSecurityKey = makeDomainSecurityKey( this );
     }
-    
+
     public AppConfig getAppConfig()
     {
         return appConfig;
@@ -136,7 +140,7 @@ public class DomainConfig implements SettingReader
 
     public Map<String, LdapProfile> getLdapProfiles( )
     {
-        return configurationSuppliers.ldapProfilesSupplier.get();
+        return ldapProfiles;
     }
 
     public EmailItemBean readSettingAsEmail( final PwmSetting setting, final Locale locale )
@@ -149,6 +153,7 @@ public class DomainConfig implements SettingReader
         return settingReader.readSettingAsEnum( setting, enumClass );
     }
 
+    @Override
     public <E extends Enum<E>> Set<E> readSettingAsOptionList( final PwmSetting setting, final Class<E> enumClass )
     {
         return settingReader.readSettingAsOptionList( setting, enumClass );
@@ -159,6 +164,7 @@ public class DomainConfig implements SettingReader
         return settingReader.readSettingAsAction( setting );
     }
 
+    @Override
     public List<String> readSettingAsLocalizedStringArray( final PwmSetting setting, final Locale locale )
     {
         return settingReader.readSettingAsLocalizedStringArray( setting, locale );
@@ -184,7 +190,7 @@ public class DomainConfig implements SettingReader
         return settingReader.readSettingAsNamedPasswords( setting );
     }
 
-    public Map<Locale, String> readLocalizedBundle( final PwmLocaleBundle className, final String keyName )
+    public Optional<Map<Locale, String>> readLocalizedBundle( final PwmLocaleBundle className, final String keyName )
     {
         return settingReader.readLocalizedBundle( className, keyName );
     }
@@ -196,12 +202,14 @@ public class DomainConfig implements SettingReader
 
     public ChallengeProfile getChallengeProfile( final String profile, final Locale locale )
     {
-        if ( !"".equals( profile ) && !getChallengeProfileIDs().contains( profile ) )
+        final Map<Locale, ChallengeProfile> cachedLocaleMap = cachedChallengeProfiles.get( profile );
+
+        if ( cachedLocaleMap == null )
         {
             throw new IllegalArgumentException( "unknown challenge profileID specified: " + profile );
         }
 
-        return cachedChallengeProfiles.get( profile ).get( locale );
+        return cachedLocaleMap.get( locale );
     }
 
     public long readSettingAsLong( final PwmSetting setting )
@@ -251,8 +259,7 @@ public class DomainConfig implements SettingReader
 
     public PwmSecurityKey getSecurityKey( ) throws PwmUnrecoverableException
     {
-        //return configurationSuppliers.pwmSecurityKey.call();
-        return getAppConfig().getSecurityKey();
+        return domainSecurityKey;
     }
 
     public List<DataStorageMethod> readGenericStorageLocations( final PwmSetting setting )
@@ -272,7 +279,7 @@ public class DomainConfig implements SettingReader
 
     public PwmSettingTemplateSet getTemplate( )
     {
-        return storedConfiguration.getTemplateSet().get( domainID );
+        return storedConfiguration.getTemplateSets().get( domainID );
     }
 
     public String readAppProperty( final AppProperty property )
@@ -283,39 +290,6 @@ public class DomainConfig implements SettingReader
     public DomainID getDomainID()
     {
         return domainID;
-    }
-
-    private class ConfigurationSuppliers
-    {
-        private final Supplier<Map<String, LdapProfile>> ldapProfilesSupplier = new LazySupplier<>( () ->
-        {
-            final Map<String, LdapProfile> sourceMap = settingReader.getProfileMap( ProfileDefinition.LdapProfile, getDomainID() );
-
-            return Collections.unmodifiableMap(
-                    sourceMap.entrySet()
-                            .stream()
-                            .filter( entry -> entry.getValue().isEnabled() )
-                            .collect( Collectors.toMap( Map.Entry::getKey, Map.Entry::getValue ) )
-            );
-        } );
-
-
-        private final LazySupplier.CheckedSupplier<PwmSecurityKey, PwmUnrecoverableException> pwmSecurityKey
-                = LazySupplier.checked( () ->
-        {
-            final StringWriter keyData = new StringWriter();
-            keyData.append( domainID.stringValue() );
-            CollectionUtil.iteratorToStream( getStoredConfiguration().keys() )
-                    .filter( key -> Objects.equals( key.getDomainID(), getDomainID() ) )
-                    .sorted()
-                    .map( storedConfiguration::readStoredValue )
-                    .flatMap( Optional::stream )
-                    .forEach( value -> keyData.append( value.valueHash() ) );
-
-            final String hashedData = SecureEngine.hash( keyData.toString(), PwmHashAlgorithm.SHA512 );
-            final PwmSecurityKey domainKey = new PwmSecurityKey( hashedData );
-            return getAppConfig().getSecurityKey().add( domainKey );
-        } );
     }
 
     /* generic profile stuff */
@@ -344,6 +318,11 @@ public class DomainConfig implements SettingReader
         return this.getProfileMap( ProfileDefinition.SetupOTPProfile );
     }
 
+    public Map<String, SetupResponsesProfile> getSetupResponseProfiles( )
+    {
+        return this.getProfileMap( ProfileDefinition.SetupResponsesProfile );
+    }
+
     public Map<String, UpdateProfileProfile> getUpdateAttributesProfile( )
     {
         return this.getProfileMap( ProfileDefinition.UpdateAttributes );
@@ -361,7 +340,7 @@ public class DomainConfig implements SettingReader
 
     public <T extends Profile> Map<String, T> getProfileMap( final ProfileDefinition profileDefinition )
     {
-        return settingReader.getProfileMap( profileDefinition, getDomainID()  );
+        return settingReader.getProfileMap( profileDefinition );
     }
 
     public StoredConfiguration getStoredConfiguration( )
@@ -374,7 +353,7 @@ public class DomainConfig implements SettingReader
         if ( readSettingAsBoolean( PwmSetting.PEOPLE_SEARCH_ENABLE_PUBLIC ) )
         {
             final String profileID = readSettingAsString( PwmSetting.PEOPLE_SEARCH_PUBLIC_PROFILE );
-            final Map<String, PeopleSearchProfile> profiles = settingReader.getProfileMap( ProfileDefinition.PeopleSearchPublic, getDomainID() );
+            final Map<String, PeopleSearchProfile> profiles = settingReader.getProfileMap( ProfileDefinition.PeopleSearchPublic );
             return Optional.ofNullable( profiles.get( profileID ) );
         }
         return Optional.empty();
@@ -419,4 +398,42 @@ public class DomainConfig implements SettingReader
         }
         return Collections.unmodifiableList( methods );
     }
+
+
+    private static Map<String, LdapProfile> makeLdapProfileMap( final DomainConfig domainConfig )
+    {
+        final Map<String, LdapProfile> sourceMap = domainConfig.getProfileMap( ProfileDefinition.LdapProfile );
+
+        return Collections.unmodifiableMap( sourceMap.entrySet()
+                .stream()
+                .filter( entry -> entry.getValue().isEnabled() )
+                .collect( CollectionUtil.collectorToLinkedMap(
+                        Map.Entry::getKey,
+                        Map.Entry::getValue ) ) );
+    }
+
+    private static PwmSecurityKey makeDomainSecurityKey( final DomainConfig domainConfig )
+            throws PwmInternalException
+    {
+        try
+        {
+            final StringWriter keyData = new StringWriter();
+            keyData.append( domainConfig.getDomainID().stringValue() );
+            CollectionUtil.iteratorToStream( domainConfig.getStoredConfiguration().keys() )
+                    .filter( key -> Objects.equals( key.getDomainID(), domainConfig.getDomainID() ) )
+                    .sorted()
+                    .map( s -> domainConfig.getStoredConfiguration().readStoredValue( s ) )
+                    .flatMap( Optional::stream )
+                    .forEach( value -> keyData.append( value.valueHash() ) );
+
+            final String hashedData = SecureEngine.hash( keyData.toString(), PwmHashAlgorithm.SHA512 );
+            final PwmSecurityKey domainKey = new PwmSecurityKey( hashedData );
+            return domainConfig.getAppConfig().getSecurityKey().add( domainKey );
+        }
+        catch ( final PwmUnrecoverableException e )
+        {
+            throw PwmInternalException.fromPwmException( "error while generating domain-specific security key", e );
+        }
+    }
+
 }
