@@ -43,6 +43,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
@@ -56,7 +57,7 @@ public class StoredConfigurationImpl implements StoredConfiguration
     private final Instant modifyTime;
     private final Map<StoredConfigKey, StoredValue> storedValues;
     private final Map<StoredConfigKey, ValueMetaData> metaValues;
-    private final Map<DomainID, PwmSettingTemplateSet> templateSet;
+    private final Map<DomainID, PwmSettingTemplateSet> templateSets;
 
     private static final PwmLogger LOGGER = PwmLogger.forClass( StoredConfigurationImpl.class );
 
@@ -64,9 +65,9 @@ public class StoredConfigurationImpl implements StoredConfiguration
     {
         this.createTime = storedConfigData.getCreateTime();
         this.modifyTime = storedConfigData.getModifyTime();
-        this.metaValues = Map.copyOf( new TreeMap<>( storedConfigData.getMetaDatas() ) );
-        this.templateSet = TemplateSetReader.readTemplateSet( storedConfigData.getStoredValues() );
-        this.storedValues = Map.copyOf( new TreeMap<>( storedConfigData.getStoredValues() ) );
+        this.metaValues = Collections.unmodifiableMap( new TreeMap<>( storedConfigData.getMetaDatas() ) );
+        this.templateSets = TemplateSetReader.readTemplateSet( storedConfigData.getStoredValues() );
+        this.storedValues = Collections.unmodifiableMap(  new TreeMap<>( storedConfigData.getStoredValues() ) );
     }
 
     StoredConfigurationImpl()
@@ -75,7 +76,7 @@ public class StoredConfigurationImpl implements StoredConfiguration
         this.modifyTime = Instant.now();
         this.storedValues = Collections.emptyMap();
         this.metaValues = Collections.emptyMap();
-        this.templateSet = TemplateSetReader.readTemplateSet( Collections.emptyMap() );
+        this.templateSets = TemplateSetReader.readTemplateSet( Collections.emptyMap() );
     }
 
     @Override
@@ -114,9 +115,9 @@ public class StoredConfigurationImpl implements StoredConfiguration
     }
 
     @Override
-    public Map<DomainID, PwmSettingTemplateSet> getTemplateSet()
+    public Map<DomainID, PwmSettingTemplateSet> getTemplateSets()
     {
-        return templateSet;
+        return templateSets;
     }
 
     private static class TemplateSetReader
@@ -130,11 +131,11 @@ public class StoredConfigurationImpl implements StoredConfiguration
             final List<DomainID> domainIDList = domainStrList.stream().map( DomainID::create ).collect( Collectors.toList() );
 
             final Map<DomainID, PwmSettingTemplateSet> templateSets = domainIDList.stream().collect( Collectors.toMap(
-                    domainID -> domainID,
+                    Function.identity(),
                     domainID -> readTemplateSet( valueMap, domainID )
             ) );
             templateSets.put( DomainID.systemId(), PwmSettingTemplateSet.getDefault() );
-            return Map.copyOf( new TreeMap<>( templateSets ) );
+            return Collections.unmodifiableMap( new TreeMap<>( templateSets ) );
         }
 
         private static PwmSettingTemplateSet readTemplateSet( final Map<StoredConfigKey, StoredValue> valueMap, final DomainID domain )
